# Rust

./: .gitignore
Box-smart_pointer/: Cargo.toml
Box-smart_pointer/src/: main.rs
Crust-of-Rust-Lifetime_Annotations/: Cargo.toml
Crust-of-Rust-macros/: Cargo.toml
Function-Closures-And-Their-Traits/: Cargo.toml
HTTP_Requests/: Cargo.toml
Rc_Refcell_Cell_OnceCell_LazyCell/: Cargo.toml
Rusty/: Cargo.toml
anchor-solana-smart-contracts/: Cargo.toml
any-how/: Cargo.toml
async-rust/: Cargo.toml
cargo_workspaces/: Cargo.toml
chapter_10_traits/: Cargo.toml
chapter_7_defining_modues_to_control_scope_and_privacy/: Cargo.toml
chrono_create/: Cargo.toml
clippy_crate/: Cargo.toml
decrust-axum/: Cargo.toml
deriving_macros/: Cargo.toml
diesel/: cargo.toml  docker-compose.yaml
dyn_dispatch_traits/: Cargo.toml
enums_rust/: Cargo.toml
hashmaps_rustbook/: Cargo.toml
json_response/: Cargo.toml
kafka-rust/: Cargo.toml
lifetime_chapter_10/: Cargo.toml
my-sql/: Cargo.toml
panic_macro_rustbook/: Cargo.toml
procedural_macros/: Cargo.toml
procedural_macros/prisma-cli/: schema.prisma
procedural_macros/src/: lib.rs
readXLSX/: Cargo.toml  txt.txt
rust-desktop-app/: Cargo.toml
rust_actix/: Cargo.toml
rustup/: Cargo.toml
rustup-rev/: Cargo.toml
serde_borsh_lifetimes_first_solana_program/: Cargo.toml  index.ts
spawn_threads/: Cargo.toml
sqlx-postgres/: .env  Cargo.toml
std_collections/: Cargo.toml
uptime/api/: Cargo.toml
uptime/api/src/: main.rs
uptime/api/src/routes/: user.rs
vectors_rust_book/: Cargo.toml
(+89 files in other folders)
