[package]
name = "procedural_macros"
version = "0.1.0"
edition = "2021"

[alias]
prisma = "run -p prisma-cli --"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = "1.0.218"
