[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
mongodb = "3.2.3"
poem = "3.1.11"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha2 = "0.10.9"
store = { path = "../store" }
tokio = {version = "1.45.1", features = ["full"]}
